--- a/themes/skeleton/layouts/partials/header.html
+++ b/themes/skeleton/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="title-wrapper">
-        <a class="header-title all-caps">Tumultur’s Blog</a>
+        <a class="header-title all-caps" href="{{ .Site.BaseURL }}">Tumultur’s Blog</a>
         <a class="header-link small-caps" href="https://github.com/Tumultur" target="_blank">Github</a>
     </div>
     <hr class="header-divider">
