--- a/themes/skeleton/static/css/style.css
+++ b/themes/skeleton/static/css/style.css
@@ -71,9 +71,9 @@ a{
   text-decoration: none;
   color: black;
 }
-a:hover{
+/* a:hover{
   text-decoration: underline;
-}
+} */
 
 /* module */
 /* .module{
