--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,8 +9,9 @@
         <p class="post-date">{{.PublishDate.Format "2006-01-02"}}</p>
         {{$cjk_spacing_fixed1 := (.Content | replaceRE "(\\p{Han}) ([a-zA-Z0-9 ]+) (\\p{Han})" "$1 $2 $3" | safeHTML)}}
         {{$cjk_spacing_fixed2 := ($cjk_spacing_fixed1 | replaceRE "(\\p{Han}) (<a.*</a>) (\\p{Han})" "$1 $2 $3" | safeHTML)}}
-        {{$cjk_spacing_fixed3 := ($cjk_spacing_fixed2 | replaceRE "(\\p{Han}) ([a-zA-Z0-9 ]+)([。、，；])" "$1 $2$3" | safeHTML)}}
-        {{$mojikumi_fixed := ($cjk_spacing_fixed3 | replaceRE "([。；，：、“”（）])([。；，：、“”（）])" "$1<span class=\"mojikumi\"></span>$2" | safeHTML)}}
+        {{$cjk_spacing_fixed3 := ($cjk_spacing_fixed2 | replaceRE "(\\p{Han}) ([a-zA-Z0-9 ]+)([。、，；”])" "$1 $2$3" | safeHTML)}}
+        {{$cjk_spacing_fixed4 := ($cjk_spacing_fixed3 | replaceRE "(\\p{Han}) (<a.*</a>)([。、，；”])" "$1 $2$3" | safeHTML)}}
+        {{$mojikumi_fixed := ($cjk_spacing_fixed4 | replaceRE "([。；，：、“”（）])([。；，：、“”（）])" "$1<span class=\"mojikumi\"></span>$2" | safeHTML)}}
         {{$mojikumi_fixed}}
     </main>
 </body>
