--- a/themes/skeleton/static/css/style.css
+++ b/themes/skeleton/static/css/style.css
@@ -10,7 +10,7 @@
 
 .small-caps {
   font-variant-caps: all-small-caps;
-  letter-spacing: .015em;
+  letter-spacing: .02em;
 }
 
 .all-caps {
@@ -29,10 +29,10 @@ body {
 
 header{
   width: 600px;
-  min-width: 60%;
+  min-width: 50%;
   max-width: 80%;
   margin: auto;
-  padding-top: 15px;
+  padding-top: 24px;
 }
 .title-wrapper{
   display: flex;
@@ -44,7 +44,7 @@ header{
   border:none;
   background:black;
   margin-top: 12px;
-  margin-bottom: 12px;
+  /* margin-bottom: 12px; */
 }
 .header-title{
   font-family: 'Segoe UI';
@@ -61,7 +61,7 @@ header{
 
 main{
     width: 600px;
-    min-width: 60%;
+    min-width: 50%;
     max-width: 80%;
     margin: auto;
     padding-bottom: 20px;
@@ -82,6 +82,7 @@ a{
 .module-title{
   /* font-style: italic; */
   margin-bottom: 6px;
+  margin-top: 24px;
 }
 /* .module-box:nth-child(even){
   background-color: #f3f3f3;
@@ -93,7 +94,7 @@ a{
 } */
 .module-box{
   /* padding-top: 6px; */
-  padding-bottom: 12px;
+  margin-bottom: 6px;
 }
 .module-numbering{
   position: absolute;
