--- a/themes/skeleton/layouts/posts/list.html
+++ b/themes/skeleton/layouts/posts/list.html
@@ -3,6 +3,7 @@
 <title>Tumultur’s Blog</title>
 {{ partial "head" . }}
 <link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/list_style.css">
 </head>
 <body>
     {{ partial "header" . }}
