--- a/themes/skeleton/layouts/about/list.html
+++ b/themes/skeleton/layouts/about/list.html
@@ -2,6 +2,7 @@
 <html lang="en">
 {{ partial "head" . }}
 <link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/list_style.css">
 <body>
     {{ partial "header" . }}
     <main>
