--- a/themes/skeleton/layouts/snippets/single.html
+++ b/themes/skeleton/layouts/snippets/single.html
@@ -8,7 +8,8 @@
     <style>
         body{
             font-variant-numeric: oldstyle-nums;
-            font-family: 'SF Pro', 'Segoe UI', 'PingFang SC', 'Microsoft Yahei', sans-serif;
+            /* font-family: 'SF Pro', 'Segoe UI', 'PingFang SC', 'Microsoft Yahei', sans-serif; */
+            font-family: system-ui;
         }
     </style>
 {{ end }}
