--- a/themes/skeleton/static/css/style.css
+++ b/themes/skeleton/static/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .text-figures {
-  font-variant-numeric: oldstyle-nums;
+  font-variant-numeric: oldstyle-nums proportional-nums;
 }
 
 .small-caps {
@@ -22,7 +22,8 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.5;
-  font-family: 'Fullwidth quotes', 'SF Pro', 'Segoe UI', 'PingFang SC', 'Microsoft Yahei', sans-serif;
+  /* font-family: 'Fullwidth quotes', 'SF Pro', 'Segoe UI', 'PingFang SC', 'Microsoft Yahei', sans-serif; */
+  font-family: 'Fullwidth quotes', system-ui;
   font-weight: 400;
   font-size: 20px;
 }
