Minor reformat, add content

--- a/themes/skeleton/layouts/index.html
+++ b/themes/skeleton/layouts/index.html
@@ -25,7 +25,7 @@
                 1
             </span>
             <a href="/snippets" class="module-hyperlink">Snippets</a>
-            <span class="module-description">个人随笔</span>
+            <span class="module-description">关于各种话题的碎碎念</span>
         </div>
         {{ range sort .Site.Data.links "order" "asc" }}
         <div class="module-box">
