--- a/themes/skeleton/static/css/post_style.css
+++ b/themes/skeleton/static/css/post_style.css
@@ -7,12 +7,13 @@ body {
 
 a{
   text-decoration: none;
-  color: #606060;
+  color: #686868;
 }
 
 h1{
   font-size: 20px;
   font-weight: 400;
+  margin-bottom: 12px;
 }
 
 p{
