--- a/themes/skeleton/layouts/posts/single.html
+++ b/themes/skeleton/layouts/posts/single.html
@@ -34,12 +34,16 @@
 
         <!-- Interpunct spacing -->
         {{$mojikumi_fixed3 := ($mojikumi_fixed2 | replaceRE "·" "<interpunct>·</interpunct>" | safeHTML)}}
+
+        <!-- Th ligature -->
+        {{$ligature_fixed := ($mojikumi_fixed2 | replaceRE "Th" "<liga>Th</liga>" | safeHTML)}}
         {{$mojikumi_fixed3}}
 
         {{ else }}
         <p class="post-title">{{.Title}}</p>
         <p class="post-date text-figures">{{.PublishDate.Format "2006-01-02"}}</p>
         {{$abbr_fixed1 := (.Content | replaceRE "([A-Z]{2,})" "<abbr class=\"small-caps\">$1</abbr>" | safeHTML)}}
+        {{$ligature_fixed := ($abbr_fixed1 | replaceRE "Th" "<liga>Th</liga>" | safeHTML)}}
         {{$abbr_fixed1}}
         {{ end }}
     </main>
