--- a/themes/skeleton/static/css/post_style.css
+++ b/themes/skeleton/static/css/post_style.css
@@ -13,7 +13,15 @@ a{
 h1{
   font-size: 20px;
   font-weight: 400;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
+}
+
+h2{
+  font-size: 20px;
+  font-weight: 400;
+  margin: 0;
+  text-indent: 2em;
+  font-style: italic;
 }
 
 p{
