--- a/themes/skeleton/layouts/partials/header.html
+++ b/themes/skeleton/layouts/partials/header.html
@@ -1,7 +1,10 @@
 <header>
     <div class="title-wrapper">
         <a class="header-title all-caps" href="{{ .Site.BaseURL }}">Tumultur’s Blog</a>
-        <a class="header-link small-caps" href="https://github.com/Tumultur" target="_blank">Github</a>
+        <div class="link-wrapper">
+            <a class="header-link small-caps" href="https://github.com/Tumultur" target="_blank">Github</a>
+            <a class="header-link small-caps" href="https://twitter.com/tumultur" target="_blank">Twitter</a>    
+        </div>
     </div>
     <hr class="header-divider">
 </header>
