--- a/themes/skeleton/layouts/index.html
+++ b/themes/skeleton/layouts/index.html
@@ -43,6 +43,17 @@
             <span class="module-description">{{.description}}</span>
         </div>
         {{end}}
+        <!-- <div style="height: 30px;"></div>
+        <div class="module-title all-caps">Links</div>
+        {{ range sort .Site.Data.friends "order" "asc" }}
+        <div class="module-box">
+            <span class="module-numbering">
+                {{.order}}
+            </span>
+            <a href="{{.link}}"  class="module-hyperlink" target="_blank">{{.name}}</a>
+            <span class="module-description">{{.description}}</span>
+        </div>
+        {{end}} -->
     </main>
 </body>
 </html>
