--- a/themes/skeleton/layouts/snippets/single.html
+++ b/themes/skeleton/layouts/snippets/single.html
@@ -17,7 +17,7 @@
         {{$cjk_spacing_fixed_new1 := (.Content | replaceRE "(\\p{Han}) " "$1 " | safeHTML)}}
         {{$cjk_spacing_fixed_new2 := ($cjk_spacing_fixed_new1 | replaceRE " (\\p{Han})" " $1" | safeHTML)}}
         <!-- Multiple punctuation spacing -->
-        {{$mojikumi_fixed1 := ($cjk_spacing_fixed_new2 | replaceRE "([。；，：、“”‘’「」『』（）《》〈〉 ])([。；，：、“”‘’「」『』（）《》〈〉 ])([。；，：、“”‘’「」『』（）《》〈〉 ])" "$1<mojikumi></mojikumi>$2<mojikumi></mojikumi>$3" | safeHTML)}}
+        {{$mojikumi_fixed1 := (.Content | replaceRE "([。；，：、“”‘’「」『』（）《》〈〉 ])([。；，：、“”‘’「」『』（）《》〈〉 ])([。；，：、“”‘’「」『』（）《》〈〉 ])" "$1<mojikumi></mojikumi>$2<mojikumi></mojikumi>$3" | safeHTML)}}
         {{$mojikumi_fixed2 := ($mojikumi_fixed1 | replaceRE "([。；，：、“”‘’「」『』（）《》〈〉 ])([。；，：、“”‘’「」『』（）《》〈〉 ])" "$1<mojikumi></mojikumi>$2" | safeHTML)}}
 
         <!-- Interpunct spacing -->
@@ -26,5 +26,48 @@
         <!-- Th ligature -->
         {{$ligature_fixed := ($mojikumi_fixed2 | replaceRE "Th" "<liga>Th</liga>" | safeHTML)}}
         {{$mojikumi_fixed2}}
+        
+        <script>
+            // spacing between CJK and latin/numerals
+            document.addEventListener('DOMContentLoaded', function () {
+              var textNodes = document.querySelectorAll('p');
+              textNodes.forEach(function (node) {
+                node.innerHTML = node.innerHTML.replace(/([\u4e00-\u9fa5]) ([a-zA-Z0-9])/g, '$1\u2006$2').replace(/([a-zA-Z0-9]) ([\u4e00-\u9fa5])/g, '$1\u2006$2');
+              });
+            });
+        </script> 
+        <script>
+            // spacing between CJK and latin/numerals in links
+            const adjustSpacingBetweenLinksAndText = () => {
+                const paragraphs = document.querySelectorAll('p');
+                paragraphs.forEach((paragraph) => {
+                    const nodes = Array.from(paragraph.childNodes);
+                    for (let i = 0; i < nodes.length; i++) {
+                        const node = nodes[i];
+                        if (node.nodeType === Node.ELEMENT_NODE && node.tagName === 'A') {
+                            const prevSibling = node.previousSibling;
+                            const nextSibling = node.nextSibling;
+        
+                            if (prevSibling && prevSibling.nodeType === Node.TEXT_NODE) {
+                                prevSibling.textContent = prevSibling.textContent.replace(/([\u4e00-\u9fa5])\s$/g, '$1\u2006');
+                            }
+        
+                            if (nextSibling && nextSibling.nodeType === Node.TEXT_NODE) {
+                                nextSibling.textContent = nextSibling.textContent.replace(/^\s([\u4e00-\u9fa5])/g, '\u2006$1');
+                            }
+                        }
+                    }
+                });
+            };
+        
+            adjustSpacingBetweenLinksAndText();
+        
+            // replace six-per-em space with ordinary space in copied text
+            document.body.addEventListener('copy', function (e) {
+                const text = window.getSelection().toString().replace(/\u2006/g, ' ');
+                e.clipboardData.setData('text/plain', text);
+                e.preventDefault();
+            });
+        </script>        
 </body>
 </html>
