--- a/themes/skeleton/layouts/snippets/single.html
+++ b/themes/skeleton/layouts/snippets/single.html
@@ -32,7 +32,7 @@
             document.addEventListener('DOMContentLoaded', function () {
               var textNodes = document.querySelectorAll('p');
               textNodes.forEach(function (node) {
-                node.innerHTML = node.innerHTML.replace(/([\u4e00-\u9fa5]) ([a-zA-Z0-9])/g, '$1\u2006$2').replace(/([a-zA-Z0-9]) ([\u4e00-\u9fa5])/g, '$1\u2006$2');
+                node.innerHTML = node.innerHTML.replace(/([\u4e00-\u9fa5]) (.)/g, '$1\u2006$2').replace(/(.) ([\u4e00-\u9fa5])/g, '$1\u2006$2');
               });
             });
         </script> 
