--- a/themes/skeleton/static/css/style.css
+++ b/themes/skeleton/static/css/style.css
@@ -35,6 +35,7 @@ body {
   padding: 0;
   line-height: 1.5;
   font-family: 'Punctuations', 'ff-scala-sans-pro', 'source-han-sans-simplified-c', system-ui;
+  /* font-family: 'Noto Sans SC'; */
   font-variant-numeric: lining-nums;
   font-weight: 400;
   font-size: 18px;
@@ -100,4 +101,8 @@ code {
   font-family: 'JetBrains Mono';
   /* font-weight: 300; */
   font-size: 16px;
+}
+
+.wf-loading {
+  visibility: hidden;
 }
