--- a/themes/skeleton/layouts/partials/head.html
+++ b/themes/skeleton/layouts/partials/head.html
@@ -1,10 +1,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    {{ $title := print .Site.Title " | " .Title }}
+    <!-- {{ $title := print .Site.Title " | " .Title }}
     {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
-    <title>{{.Title}}</title>
+    <title>{{.Title}}</title> -->
     <script>
       (function(d) {
         var config = {
