--- a/themes/skeleton/layouts/partials/head.html
+++ b/themes/skeleton/layouts/partials/head.html
@@ -1,10 +1,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- {{ $title := print .Site.Title " | " .Title }}
+    {{ $title := print .Site.Title " | " .Title }}
     {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
-    <title>{{.Title}}</title> -->
-    <script>
+    <title>{{.Title}}</title>
+    <!-- <script>
       (function(d) {
         var config = {
           kitId: 'lve8pdl',
@@ -13,7 +13,9 @@
         },
         h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
       })(document);
-    </script>
+    </script> -->
+    <script src="//use.typekit.net/lve8pdl.js"></script>
+    <script>try{Typekit.load({kitId: 'lve8pdl', async: true});}catch(e){}</script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap" rel="stylesheet">
