--- a/themes/skeleton/static/css/style.css
+++ b/themes/skeleton/static/css/style.css
@@ -1,8 +1,8 @@
 /* self host subsetted Source Han Sans */
 @font-face {
   font-family: "Punctuations";
-  src: url('/fonts/Punctuations.woff2') format('woff2');
-  /* unicode-range: U+2018-2019, U+201C-201D, U+00B7, U+002B, u+002F, u+005C; */
+  src: url('/fonts/Punctuations.otf') format('opentype');
+  /* unicode-range: U+2018-2019, U+201C-201D, U+00B7, U+002B, u+002F, u+005C, u+2014; */
 }
 
 @font-face {
