--- a/themes/skeleton/static/css/post_style.css
+++ b/themes/skeleton/static/css/post_style.css
@@ -11,30 +11,30 @@ a{
 }
 
 h1{
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 400;
   margin-bottom: 10px;
 }
 
 h2{
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 400;
   margin: 0;
-  text-indent: 2em;
+  text-indent: 1em;
   font-style: italic;
 }
 
 p{
   /* text-indent: 2em; */
   margin: 0px;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
 
 pre {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   /* border-left: 2px solid green; */
-  padding-left: 12px;
+  padding-left: 14px;
   padding-top: 3px;
   padding-bottom: 3px;
   margin-top: 0px;
@@ -47,12 +47,13 @@ code {
   white-space : pre-wrap;
   font-family: 'ff-nuvo-mono-web-pro', 'Noto Sans SC';
   /* font-weight: 500; */
-  font-size: 16px;
+  font-size: 18px;
 }
 
 table {
   border-collapse: collapse;
   margin: auto;
+  margin-bottom: 12px;
 }
 
 th {
@@ -73,7 +74,7 @@ td {
 
 .post-date{
   text-indent: 0;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
 
 .post-title{
@@ -88,4 +89,10 @@ interpunct {
 
 mojikumi {
   margin-right: -10px;
+}
+
+.module-numbering{
+  position: absolute;
+  width: 20px;
+  margin-left: -20px;
 }
