--- a/themes/skeleton/layouts/partials/header.html
+++ b/themes/skeleton/layouts/partials/header.html
@@ -2,6 +2,7 @@
     <div class="title-wrapper">
         <a class="header-title all-caps" href="{{ .Site.BaseURL }}">Tumultur’s Blog</a>
         <div class="link-wrapper">
+            <a class="header-link small-caps" href="mailto:tumultur@outlook.com" target="_blank">Mail</a>
             <a class="header-link small-caps" href="https://github.com/Tumultur" target="_blank">Github</a>
             <a class="header-link small-caps" href="https://twitter.com/tumultur" target="_blank">Twitter</a>    
         </div>
