--- a/themes/skeleton/static/css/list_style.css
+++ b/themes/skeleton/static/css/list_style.css
@@ -2,15 +2,19 @@ a{
   text-decoration: none;
   color: black;
 }
+.module-title {
+  margin-bottom: 0px;
+}
 .module-box{
   margin-bottom: 0px;
 }
+
 .module-numbering{
   position: absolute;
   width: 20px;
   margin-left: -24px;
 }
-.module-hyperlink{
+.module-hyperlink {
   display: inline-block;
   width: 100%;
 }
