Reformat reading list

--- a/themes/skeleton/layouts/index.html
+++ b/themes/skeleton/layouts/index.html
@@ -32,7 +32,7 @@
                 2
             </span>
             <a href="/reading" class="module-hyperlink">Reading List</a>
-            <span class="module-description">普通的书单</span>
+            <span class="module-description">字体排版书单</span>
         </div>
         {{ range sort .Site.Data.links "order" "asc" }}
         <div class="module-box">
