Various formatting, add about page

--- a/themes/skeleton/layouts/about/list.html
+++ b/themes/skeleton/layouts/about/list.html
@@ -3,15 +3,41 @@
 {{ partial "head" . }}
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 <link rel="stylesheet" type="text/css" href="/css/list_style.css">
+<!-- <style>div.module-box a{color: #888888;}</style> -->
 <body>
     {{ partial "header" . }}
     <main>
         <div class="module-title all-caps">About</div>
         <div class="module-box">
             <span class="module-numbering">-</span>
-            <span>Arbitary placeholder 1</span>
+            <span>I hardly have anything to say about myself.</span>
         </div>
+        <div class="module-box">
+            <span class="module-numbering">-</span>
+            <span>This site serves no purpose in particular, I’m just feeling like building it and here it is. The theme is called Skeleton and I’m more than happy to share it upon request.</span>
+        </div>
+        <div class="module-box">
+            <span class="module-numbering">-</span>
+            <span>Listed below are ways to get in touch with me. (Please do.)</span>
+        </div>
+        <div style="height: 20px;"></div>
         <div class="module-title all-caps">Contact</div>
+        <div class="module-box">
+            <span class="module-numbering">-</span>
+            <a href="https://twitter.com/tumultur" target="_blank">Twitter</a>
+        </div>
+        <div class="module-box">
+            <span class="module-numbering">-</span>
+            <a href="mailto:tumultur@outlook.com">Email</a>
+        </div>
+        <div class="module-box">
+            <span class="module-numbering">-</span>
+            <a href="https://github.com/Tumultur" target="_blank">Github</a>
+        </div>
+        <div class="module-box">
+            <span class="module-numbering">-</span>
+            <a href="https://bangumi.tv/user/659265" target="_blank">Bangumi</a>
+        </div>
     </main>
 </body>
 </html>
