--- a/themes/skeleton/layouts/reading/single.html
+++ b/themes/skeleton/layouts/reading/single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {{ partial "head" . }}
 <link rel="stylesheet" type="text/css" href="/css/style.css">
-<link rel="stylesheet" type="text/css" href="/css/post_style.css">
+<link rel="stylesheet" type="text/css" href="/css/list_style.css">
 <style>
     h1 {
         margin-top: 30px; margin-bottom: 0;
