--- a/themes/skeleton/layouts/partials/head.html
+++ b/themes/skeleton/layouts/partials/head.html
@@ -3,6 +3,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ $title := print .Site.Title " | " .Title }}
     {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
+    {{ if eq .Params.cjk false}}
+        <style>
+        body{
+            font-variant-numeric: oldstyle-nums;
+            font-family: 'ff-scala-sans-pro', 'Noto Sans SC', system-ui !important;
+        }
+    </style>
+    {{ end }}
     <title>{{.Title}}</title>
     <!-- <script>
       (function(d) {
