Integrate spacing policies

--- a/themes/skeleton/layouts/index.html
+++ b/themes/skeleton/layouts/index.html
@@ -68,6 +68,7 @@
             <span class="module-description">{{.description}}</span>
         </div>
         {{end}} -->
+        {{.Content}}
     </main>
 </body>
 </html>
