--- a/themes/skeleton/layouts/posts/single.html
+++ b/themes/skeleton/layouts/posts/single.html
@@ -3,48 +3,25 @@
 {{ partial "head" . }}
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 <link rel="stylesheet" type="text/css" href="/css/post_style.css">
-{{ if eq .Params.cjk false}}
-    <style>
-        body{
-            font-variant-numeric: oldstyle-nums;
-            /* font-family: 'SF Pro', 'Segoe UI', 'PingFang SC', 'Microsoft Yahei', sans-serif; */
-            font-family: system-ui;
-        }
-    </style>
+{{ if eq .Params.cjk true}}
+<script src="/js/spacing.js"></script>
+<style>
+.post-date {
+    font-variant-numeric: tabular-nums lining-nums !important;
+}
+</style>
 {{ end }}
 </head>
 <body>
     {{ partial "header" . }}
     <main>
-        {{ if eq .Params.cjk true}}
-        <p class="post-title">{{.Title | replaceRE "(\\p{Han}) ([a-zA-Z0-9 ]+) (\\p{Han})" "$1 $2 $3" | safeHTML}}</p>
-        <p class="post-date">{{.PublishDate.Format "2006-01-02"}}</p>
-        
-        <!-- Spacing between CJK and Latin characters -->
-        {{$cjk_spacing_fixed1 := (.Content | replaceRE "(\\p{Han}) ([a-zA-Z0-9 ]+) (\\p{Han})" "$1 $2 $3" | safeHTML)}}
-        {{$cjk_spacing_fixed2 := ($cjk_spacing_fixed1 | replaceRE "(\\p{Han}) (<a.*</a>) (\\p{Han})" "$1 $2 $3" | safeHTML)}}
-        {{$cjk_spacing_fixed3 := ($cjk_spacing_fixed2 | replaceRE "(\\p{Han}) ([a-zA-Z0-9 ]+)([。、，；”])" "$1 $2$3" | safeHTML)}}
-        {{$cjk_spacing_fixed4 := ($cjk_spacing_fixed3 | replaceRE "(\\p{Han}) (<a.*</a>)([。、，；”])" "$1 $2$3" | safeHTML)}}
-        {{$cjk_spacing_fixed5 := ($cjk_spacing_fixed4 | replaceRE "(<a.*>.*) (.*</a>)" "$1&nbsp;$2" | safeHTML)}}
-        {{$cjk_spacing_fixed_new1 := (.Content | replaceRE "(\\p{Han}) " "$1 " | safeHTML)}}
-        {{$cjk_spacing_fixed_new2 := ($cjk_spacing_fixed_new1 | replaceRE " (\\p{Han})" " $1" | safeHTML)}}
-        <!-- Multiple punctuation spacing -->
-        {{$mojikumi_fixed1 := ($cjk_spacing_fixed_new2 | replaceRE "([。；，：、「」『』（）《》〈〉 ])([。；，：、「」『』（）《》〈〉 ])([。；，：、「」『』（）《》〈〉 ])" "$1<mojikumi></mojikumi>$2<mojikumi></mojikumi>$3" | safeHTML)}}
-        {{$mojikumi_fixed2 := ($mojikumi_fixed1 | replaceRE "([。；，：、「」『』（）《》〈〉 ])([。；，：、「」『』（）《》〈〉 ])" "$1<mojikumi></mojikumi>$2" | safeHTML)}}
-
-        <!-- Interpunct spacing -->
-        {{$mojikumi_fixed3 := ($mojikumi_fixed2 | replaceRE "·" "<interpunct>·</interpunct>" | safeHTML)}}
-
-        <!-- Th ligature -->
-        {{$ligature_fixed := ($mojikumi_fixed2 | replaceRE "Th" "<liga>Th</liga>" | safeHTML)}}
-        {{$mojikumi_fixed2}}
-
-        {{ else }}
         <p class="post-title">{{.Title}}</p>
         <p class="post-date text-figures">{{.PublishDate.Format "2006-01-02"}}</p>
+        {{ if eq .Params.cjk false}}
         {{$abbr_fixed1 := (.Content | replaceRE "([A-Z]{2,})" "<abbr class=\"small-caps\">$1</abbr>" | safeHTML)}}
-        {{$ligature_fixed := ($abbr_fixed1 | replaceRE "Th" "<liga>Th</liga>" | safeHTML)}}
         {{$abbr_fixed1}}
+        {{ else }}
+        {{.Content}}
         {{ end }}
     </main>
 </body>
