--- a/themes/skeleton/static/css/style.css
+++ b/themes/skeleton/static/css/style.css
@@ -95,3 +95,36 @@ main{
 .hzitalic {
   font-style: italic;
 }
+
+h1 {
+  text-transform: uppercase;
+  letter-spacing: 0.04em;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 8px;
+}
+
+h2{
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 8px;
+  margin-bottom: 0px;
+  font-variant-numeric: oldstyle-nums;
+}
+
+h3{
+  font-size: 20px;
+  font-weight: 400;
+  margin: 0;
+  text-indent: 1em;
+  font-style: italic;
+}
+
+interpunct {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+mojikumi {
+  margin-right: -10px;
+}
