Have no idea what I’m writing

--- a/themes/skeleton/layouts/about/single.html
+++ b/themes/skeleton/layouts/about/single.html
@@ -13,7 +13,7 @@
         </div>
         <div class="module-box">
             <span class="module-numbering">-</span>
-            <span>This site serves no purpose in particular, I’m just feeling like building it and here it is. The theme is called Skeleton and I’m more than happy to share it upon request.</span>
+            <span>This site serves no purpose in particular, I’m just feeling like building a blog and here it is. The theme is called Skeleton and I’m more than happy to share it upon request.</span>
         </div>
         <div class="module-box">
             <span class="module-numbering">-</span>
